2009-06-05  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* CSharpBinding.addin.xml:
	* Parser/CSharpFormatter.cs:
	* FormattingStrategy/CSharpFormattingPolicy.cs:
	* FormattingStrategy/CSharpFormattingPolicyPanel.cs:
	* FormattingStrategy/CSharpFormattingStyleDefinition.xml:
	  Worked on C# formatter it should now fit better in the
	  policy system.

2009-06-04  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Fixed "Bug 509620 -
	  Auto-completion shows empty constructor when there are no
	  constructors available (because of being private)".

2009-06-02  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.csproj: Set correct resource id.

2009-06-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: Fixed "Bug 509019 - Autocomplete for
	  new generic of array omits brackets".

2009-06-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed "Bug 507063 - XML
	  auto-comment doesn't work for indexers or properties".

2009-06-02  Mike Krüger  <mkrueger@novell.com>

	* Parser/FindMemberAstVisitor.cs: Fixed "Bug 507737 - Renaming
	  parameter of method renames parameter occurrences in other
	  methods in the same file".

2009-05-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am: Corrected makefile.

2009-05-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* FormattingStrategy/CSharpFormattingPolicy.cs:
	* FormattingStrategy/CSharpFormattingPolicy.xml: Worked on C#
	  formatting policy.

2009-05-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed "Bug 506707 - Code
	  completion shows fully qualified class names when using
	  alias directive is used."

2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpLanguageBinding.cs: Add support for .net 4.0.

	* CSharpBindingCompilerManager.cs: Properly locate the
	  compiler when running on MS.NET.
